--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,47 @@
 }
 
 .card {
-  padding: 2em;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #f7f7f7;
 }
+.error{
+
+  color: red;
+  font-weight: bold;
+}
+
+
 
 .read-the-docs {
   color: #888;
+}
+
+.formulario {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.formulario label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.formulario input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.formulario button[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.formulario button[type="submit"]:hover {
+  background-color: #0056b3;
 }
